--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ footer {
 
       <div>
         <strong>Resume</strong>
-        <div><a href="#" style="color:var(--accent)">Download CV (placeholder)</a></div>
+        <div><a href="https://github.com/blossomchi/blossomchi.github.io/raw/main/SCHOOL%20CV%20CHINYERE%20BLOSSOM%20OYEM.pdf" style="color:var(--accent)">Download CV (placeholder)</a></div>
       </div>
     </div>
   </div>
