--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ footer {
 
         <div class="form-actions">
           <button type="submit" class="btn-primary">Send</button>
-          <a href="mailto:youremail@example.com" class="btn-ghost">Email</a>
+          <a href="mailto:chiblossoyem@gmail.com" class="btn-ghost">Email</a>
         </div>
       </form>
 
