--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ footer {
           <div class="card">
             <h4 style="margin-top:0">Skills & Tools</h4>
             <ul class="skills" style="margin-top:10px">
-              <li>Python</li><li>PyTorch</li><li>TensorFlow</li><li>Scikit-learn</li><li>Arduino</li><li>Streamlit</li><li>Flask</li>
+              <li>Python</li><li>PyTorch</li><li>TensorFlow</li><li>Scikit-learn</li><li>Arduino</li><li>Streamlit</li><li>Flask</li><li>SQL</li><li>PlSQL</li><li>C#</li><li>VB.NET</li>
             </ul>
             <div style="margin-top:12px;color:var(--muted);font-size:13px">I supervise student projects and design hands-on bootcamps for ages 8–16.</div>
           </div>
