--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="Blossom Oyem — Machine Learning Engineer & Robotics Enthusiast. Projects: AI chatbot, smart bin, house price predictor and more."/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="blossom.ico">
+
   <style>
     :root{
       --bg:#0f1724; /* deep navy */
