Change image file extensions from .jpg to .jpeg

--- a/project2.html
+++ b/project2.html
@@ -151,9 +151,9 @@
       <p style="margin-top:-6px;color:var(--muted)">Photos of the Smart Waste Bin Prototype:</p>
 
       <div class="gallery-grid">
-        <img src="smartbin1.jpg" alt="Smart Bin Image 1">
-        <img src="smartbin2.jpg" alt="Smart Bin Image 2">
-        <img src="smartbin3.jpg" alt="Smart Bin Image 3">
+        <img src="smartbin1.jpeg" alt="Smart Bin Image 1">
+        <img src="smartbin2.jpeg" alt="Smart Bin Image 2">
+        <img src="smartbin3.jpeg" alt="Smart Bin Image 3">
       </div>
 
       <h3 style="margin-top:26px;">Development Approach (Waterfall Model)</h3>
