--- a/project1.html
+++ b/project1.html
@@ -155,9 +155,9 @@
       <p style="margin-top:-6px;color:var(--muted)">Screenshots of the AI Chatbot interface:</p>
 
       <div class="gallery-grid">
-        <img src="chatbot1.jpg" alt="Chatbot Interface 1">
-        <img src="chatbot2.jpg" alt="Chatbot Interface 2">
-        <img src="chatbot3.jpg" alt="Chatbot Interface 3">
+        <img src="chatbot1.png" alt="Chatbot Interface 1">
+        <img src="chatbot2.png" alt="Chatbot Interface 2">
+        <img src="chatbot3.png" alt="Chatbot Interface 3">
       </div>
 
       <!-- FEATURES -->
