--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@ footer {
 
           <article class="project card">
             <div>
-              <h4>House Price Prediction</h4>
-              <p style="margin:6px 0;color:var(--muted);font-size:13px">Linear regression model + Streamlit app using Bengaluru dataset for interactive price estimation.</p>
+              <h4>Fruit Classification Using Transfer Learning (VGG16)</h4>
+              <p style="margin:6px 0;color:var(--muted);font-size:13px">Deep learning model built with VGG16 to classify fruit images efficiently with minimal training data.</p>
             </div>
             <div style="display:flex;justify-content:space-between;align-items:center;margin-top:12px">
               <div class="tags"><span class="tag">Scikit-learn</span><span class="tag">Streamlit</span></div>
