Replace project details for firefighter robot

--- a/index.html
+++ b/index.html
@@ -362,11 +362,11 @@ footer {
 
           <article class="project card">
             <div>
-              <h4>Centralized Online Food Ordering</h4>
-              <p style="margin:6px 0;color:var(--muted);font-size:13px">Prototype with PHP/MySQL, functional UX for order and inventory management.</p>
+              <h4>Firefighter Humanoid Robot</h4>
+              <p style="margin:6px 0;color:var(--muted);font-size:13px">Autonomous firefighting robot with water suppression, flame sensing, and four-wheel mobility inspired by the 2025 Canadian wildfire crisis.</p>
             </div>
             <div style="display:flex;justify-content:space-between;align-items:center;margin-top:12px">
-              <div class="tags"><span class="tag">PHP</span><span class="tag">MySQL</span></div>
+              <div class="tags"><span class="tag">Arduino</span><span class="tag">Embedded</span></div>
               <a href="project5.html" class="btn-ghost" style="padding:8px 10px">Open</a>
             </div>
           </article>
