Change link target from '#' to 'project6.html'

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ footer {
             </div>
             <div style="display:flex;justify-content:space-between;align-items:center;margin-top:12px">
               <div class="tags"><span class="tag">Teaching</span><span class="tag">Tutorials</span></div>
-              <a href="#" class="btn-ghost" style="padding:8px 10px">Open</a>
+              <a href="project6.html" class="btn-ghost" style="padding:8px 10px">Open</a>
             </div>
           </article>
         </div>
