Update YouTube video link in project6.html

--- a/project6.html
+++ b/project6.html
@@ -157,7 +157,7 @@
       <p>Below is a featured tutorial from my YouTube channel <strong>“Blossom Coding World”</strong>:</p>
 
       <iframe 
-        src="https://www.youtube.com/embed/BpFY-CvZb-Q" 
+        src="https://youtu.be/KHCXQoeSa5Q" 
         allowfullscreen>
       </iframe>
 
