Update projects section description in index.html
Removed reference to 'matching projectN.html files' from the projects section.

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ footer {
 
       <section id="projects" class="section">
         <h3 style="margin:0">Projects</h3>
-        <p style="margin-top:8px;color:var(--muted)">Selected projects — click to open the project page (place matching projectN.html files in your repo).</p>
+        <p style="margin-top:8px;color:var(--muted)">Selected projects — click to open the project page.</p>
 
         <div class="projects-grid">
           <article class="project card">
